decided to add pages for each project card for it's detail

--- a/projects.html
+++ b/projects.html
@@ -54,33 +54,26 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">TravelGo - Interactive Travel Booking Website</h5>
                             <p class="card-text">A responsive travel booking website...</p>
-                            <div class="collapse" id="travelDetails">
-                                <p class="card-text">TravelGo is a responsive travel booking website built with HTML, CSS, and Bootstrap. It features a hero section, featured destinations, curated packages, and Google Maps integration.</p>
-                            </div>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                            <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#travelDetails" aria-expanded="false">See Details</button>
-                            <a href="https://github.com/roddazad/travel-destination-website" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                            <a href="https://roddazad.github.io/travel-destination-website/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
-                          </div>
+                                <a href="./ptoject-html/travelGo.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="https://github.com/roddazad/travel-destination-website" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                                <a href="https://roddazad.github.io/travel-destination-website/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Project Number 2 -->
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="card bg-secondary text-light shadow-lg">
-                        <img src="./img/movieSearch.png" class="card-img-top" alt="Financial Consulting Website" />
+                        <img src="./img/movieSearch.png" class="card-img-top" alt="Movie Search App" />
                         <div class="card-body text-center">
-                            <h5 class="card-title">🎬 Movie Search App.</h5>
+                            <h5 class="card-title">🎬 Movie Search App</h5>
                             <p class="card-text">Discover, Track, and Save Your Favorite Films with Ease!...</p>
-                            <div class="collapse" id="financeDetails">
-                                <p class="card-text">The Movie Search App is a sleek and responsive web app that lets users search for movies, explore trending and classic films, and manage a watchlist with The Movie Database (TMDb) API. Built with HTML, CSS, JavaScript, and Bootstrap, it features real-time search, Local Storage watchlist, smooth animations, and a dark-themed UI. Future enhancements include a Movie Details Page, genre filtering, and user authentication for a personalized experience. This project highlights my front-end development skills, including API integration and UI/UX design, to create an intuitive and engaging movie discovery platform. 🚀🎬
-                                </p>
-                            </div>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                            <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#financeDetails" aria-expanded="false">See Details</button>
-                            <a href="https://github.com/roddazad/movie-search" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                            <a href="https://roddazad.github.io/movie-search/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
-                          </div>
+                                <a href="./ptoject-html/movie-search.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="https://github.com/roddazad/movie-search" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                                <a href="https://roddazad.github.io/movie-search/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -91,14 +84,11 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Mediterranean Delight – A Taste of the Mediterranean Experience</h5>
                             <p class="card-text">A visually stunning, responsive restaurant website...</p>
-                            <div class="collapse" id="mediterraneanDetails">
-                                <p class="card-text">Built with HTML, CSS, Bootstrap, and JavaScript, this website offers an immersive online experience. It features an elegant hero section, interactive carousel showcasing specialties, a structured menu page with appetizing imagery, and a reservation modal for seamless booking.</p>
-                            </div>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                            <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#mediterraneanDetails" aria-expanded="false">See Details</button>
-                            <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                            <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
-                          </div>
+                                <a href="mediterranean-delight.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                                <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -109,14 +99,11 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">Piano Wonderland - Bilingual Piano Lessons Website 🎹</h5>
                             <p class="card-text">A bilingual piano lessons website...</p>
-                            <div class="collapse" id="pianoDetails">
-                                <p class="card-text">Built with HTML, CSS, and Bootstrap, this site offers seamless language switching, a dynamic service carousel, collapsible content sections, and an elegant dark-themed design.</p>
-                            </div>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                            <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#pianoDetails" aria-expanded="false">See Details</button>
-                            <a href="https://github.com/roddazad/piano-teacher" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                            <a href="https://roddazad.github.io/piano-teacher/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
-                          </div>
+                                <a href="piano-wonderland.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="https://github.com/roddazad/piano-teacher" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                                <a href="https://roddazad.github.io/piano-teacher/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -128,7 +115,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>
                                 <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
@@ -143,8 +130,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -158,8 +144,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -173,8 +158,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -188,8 +172,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -203,8 +186,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -218,8 +200,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
@@ -233,8 +214,7 @@
                             <h5 class="card-title">Project Title</h5>
                             <p class="card-text">Short project description goes here...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <button class="btn btn-outline-info" type="button">See Details</button>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
                                 <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
