added all four projects to the project page and from there created a detail for each in a new html page

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
                             <h5 class="card-title">Mediterranean Delight – A Taste of the Mediterranean Experience</h5>
                             <p class="card-text">A visually stunning, responsive restaurant website...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <a href="mediterranean-delight.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="./ptoject-html/med-delight.html" class="btn btn-outline-info mt-2">See Details</a>
                                 <a href="https://github.com/roddazad/mediterranean-delight" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
                                 <a href="https://roddazad.github.io/mediterranean-delight/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                             </div>
@@ -100,7 +100,7 @@
                             <h5 class="card-title">Piano Wonderland - Bilingual Piano Lessons Website 🎹</h5>
                             <p class="card-text">A bilingual piano lessons website...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <a href="piano-wonderland.html" class="btn btn-outline-info mt-2">See Details</a>
+                                <a href="./ptoject-html/piano.html" class="btn btn-outline-info mt-2">See Details</a>
                                 <a href="https://github.com/roddazad/piano-teacher" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
                                 <a href="https://roddazad.github.io/piano-teacher/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
                             </div>
