--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,9 @@
                         <img src="./img/travelGo.png" class="card-img-top" alt="Travel Booking Project" />
                         <div class="card-body text-center">
                             <h5 class="card-title">TravelGo - Interactive Travel Booking Website</h5>
+                            <p class="card-text technology">HTML, CSS, Bootstrap</p>
                             <p class="card-text">A responsive travel booking website...</p>
+
                             <div class="d-flex justify-content-center gap-2 mt-2">
                                 <a href="./ptoject-html/travelGo.html" class="btn btn-outline-info mt-2">See Details</a>
                                 <a href="https://github.com/roddazad/travel-destination-website" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
@@ -68,6 +70,7 @@
                         <img src="./img/movieSearch.png" class="card-img-top" alt="Movie Search App" />
                         <div class="card-body text-center">
                             <h5 class="card-title">🎬 Movie Search App</h5>
+                            <p class="card-text technology">HTML, CSS, Bootstrap, JavaScript, Third part API</p>
                             <p class="card-text">Discover, Track, and Save Your Favorite Films with Ease!...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
                                 <a href="./ptoject-html/movie-search.html" class="btn btn-outline-info mt-2">See Details</a>
@@ -83,6 +86,7 @@
                         <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
                         <div class="card-body text-center">
                             <h5 class="card-title">Mediterranean Delight – A Taste of the Mediterranean Experience</h5>
+                            <p class="card-text technology">HTML, CSS, Bootstrap</p>
                             <p class="card-text">A visually stunning, responsive restaurant website...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
                                 <a href="./ptoject-html/med-delight.html" class="btn btn-outline-info mt-2">See Details</a>
@@ -98,6 +102,7 @@
                         <img src="./img/hero.png" class="card-img-top" alt="Piano Wonderland">
                         <div class="card-body text-center">
                             <h5 class="card-title">Piano Wonderland - Bilingual Piano Lessons Website 🎹</h5>
+                            <p class="card-text technology">HTML, CSS, Bootstrap</p>
                             <p class="card-text">A bilingual piano lessons website...</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
                                 <a href="./ptoject-html/piano.html" class="btn btn-outline-info mt-2">See Details</a>
