--- a/projects.html
+++ b/projects.html
@@ -115,14 +115,15 @@
                 <!-- Project Number 5 -->
                 <div class="col-md-6 col-lg-4 mb-4">
                     <div class="card bg-secondary text-light shadow-lg">
-                        <img src="https://media.istockphoto.com/id/1075374594/vector/coming-soon-sign.jpg?s=612x612&w=0&k=20&c=Iq8J6VDoFDbgSxWVE5fQrVmYjpofBcuHFlZrMZv_BM4=" class="card-img-top" alt="Project Image">
+                        <img src="./img/to-do-list.png" class="card-img-top" alt="Project Image">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Project Title</h5>
-                            <p class="card-text">Short project description goes here...</p>
+                            <h5 class="card-title">To-Do List</h5>
+                            <p class="card-text technology">HTML, CSS, Bootstrap</p>
+                            <p class="card-text">A simple and intuitive To-Do List App with local storage support for seamless task management</p>
                             <div class="d-flex justify-content-center gap-2 mt-2">
-                                <a href="./ptoject-html/project-template.html" class="btn btn-outline-info">See Details</a>
-                                <a href="#" class="btn btn-outline-info" target="_blank">View Code</a>
-                                <a href="#" class="btn btn-outline-light" target="_blank">Live Demo</a>
+                                <a href="./ptoject-html/to-do-list.html" class="btn btn-outline-info">See Details</a>
+                                <a href="https://github.com/roddazad/to-do-list" class="btn btn-outline-info" target="_blank">View Code</a>
+                                <a href="https://roddazad.github.io/to-do-list/" class="btn btn-outline-light" target="_blank">Live Demo</a>
                             </div>
                         </div>
                     </div>
