added all the projects to the projects.html and the project folder

--- a/ptoject-html/movie-search.html
+++ b/ptoject-html/movie-search.html
@@ -1,3 +1,4 @@
+<!-- Movie Search App Details -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,25 +22,27 @@
 
     <div class="container text-center">
         <h1 class="mt-4">🎬 Movie Search App</h1>
-        <p class="lead">A web-based app to search, track, and explore movies effortlessly.</p>
+        <p class="lead">A web-based movie discovery platform with trending, classic, and watchlist features.</p>
         <img src="../img/movieSearch.png" alt="Movie Search App" class="project-img">
         <h3>📽️ Overview</h3>
-        <p>The Movie Search App is a web-based application that allows users to search for movies, view trending films, and explore classic movies based on decades. The app fetches movie data from The Movie Database (TMDb) API and presents an interactive, user-friendly interface using HTML, CSS, JavaScript, and Bootstrap.</p>
+        <p>The **Movie Search App** is a web-based application that allows users to search for movies, view trending films, and explore classic movies based on decades. The app fetches movie data from **The Movie Database (TMDb) API** and presents an interactive, user-friendly interface using **HTML, CSS, JavaScript, and Bootstrap**.</p>
         <h3>✅ Features</h3>
         <ul class="list-group list-group-flush text-start bg-transparent">
-            <li class="list-group-item bg-transparent text-light">✔ Search for movies using TMDb API</li>
-            <li class="list-group-item bg-transparent text-light">✔ View trending movies dynamically fetched from the API</li>
-            <li class="list-group-item bg-transparent text-light">✔ Explore classic movies sorted by decade</li>
-            <li class="list-group-item bg-transparent text-light">✔ Add movies to a Watchlist with Local Storage</li>
-            <li class="list-group-item bg-transparent text-light">✔ Remove movies from the Watchlist</li>
-            <li class="list-group-item bg-transparent text-light">✔ Consistent UI with smooth animations</li>
-            <li class="list-group-item bg-transparent text-light">✔ Dark mode-friendly theme</li>
+            <li class="list-group-item bg-transparent text-light">✔ Search for Movies** using TMDb API</li>
+            <li class="list-group-item bg-transparent text-light">✔ View Trending Movies** dynamically fetched from the API</li>
+            <li class="list-group-item bg-transparent text-light">✔ Explore Classic Movies** sorted by decade</li>
+            <li class="list-group-item bg-transparent text-light">✔ Add Movies to a Watchlist** with Local Storage</li>
+            <li class="list-group-item bg-transparent text-light">✔ Remove Movies from the Watchlist**</li>
+            <li class="list-group-item bg-transparent text-light">✔ Consistent UI with Smooth Animations**</li>
+            <li class="list-group-item bg-transparent text-light">✔ Dark Mode-Friendly Theme**</li>
         </ul>
         <h3>🚀 Future Enhancements</h3>
         <ul class="list-group list-group-flush text-start bg-transparent">
-            <li class="list-group-item bg-transparent text-light">🔹 Movie Details Page - View detailed information including description, cast, release date, and ratings.</li>
-            <li class="list-group-item bg-transparent text-light">🔹 Genre-Based Filtering - Allow users to filter movies by genre for better discovery.</li>
-            <li class="list-group-item bg-transparent text-light">🔹 User Authentication - Enable users to save their watchlists across different devices.</li>
+            <li class="list-group-item bg-transparent text-light">🔹 Movie Details Page** - Display full movie information, including description, cast, release date, and ratings.</li>
+            <li class="list-group-item bg-transparent text-light">🔹 Genre-Based Filtering** - Allow users to filter movies by genre for better discovery.</li>
+            <li class="list-group-item bg-transparent text-light">🔹 User Authentication** - Enable users to save their watchlists across different devices.</li>
+            <li class="list-group-item bg-transparent text-light">🔹 Streaming Availability Checker** - Show where users can watch a selected movie.</li>
+            <li class="list-group-item bg-transparent text-light">🔹 Actor/Director Search Functionality** - Allow users to search movies by actors or directors.</li>
         </ul>
         <h3>🛠️ Technologies Used</h3>
         <p><strong>HTML</strong> | <strong>CSS</strong> | <strong>Bootstrap</strong> | <strong>JavaScript</strong> | <strong>TMDb API</strong></p>
@@ -51,7 +54,7 @@
             <li class="list-group-item bg-transparent text-light">📌 <strong>Bootstrap</strong> - Responsive design and components.</li>
             <li class="list-group-item bg-transparent text-light">📌 <strong>JavaScript</strong> - Client-side interactivity and API handling.</li>
             <li class="list-group-item bg-transparent text-light">📌 <strong>The Movie Database (TMDb) API</strong> - Fetching real-time movie data.</li>
-            <li class="list-group-item bg-transparent text-light">📌 <strong>Local Storage</strong> - Saving user preferences and watchlists.</li>
+            <li class="list-group-item bg-transparent text-light">📌 <strong>Local Storage</strong> - Storing watchlist data for persistence.</li>
         </ul>
         
         <div class="btn-container">
