resolved merge conflict

--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
             <h2 class="display-5 fw-bold mb-4">My Resume</h2>
             <p class="lead mb-4">Take a look at my experience and skills in detail</p>
             <!-- View Resume Button -->
-             <a href="./other/fullstack.pdf" class="btn btn-outline-info mb-4" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
+             <a href="./other/v1.pdf" class="btn btn-outline-info mb-4" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
              <!-- Resume Preview -->
               <div class="resume-preview d-none d-md-block">
-                <iframe src="./other/fullstack.pdf" width="100%" height="500px"></iframe>
+                <iframe src="./other/v1.pdf" width="100%" height="500px"></iframe>
               </div>
         </div>
      </section>
