added a new project

--- a/projects.html
+++ b/projects.html
@@ -429,8 +429,22 @@
               </div>
             </div>
           </div>
-          <!-- Project Number 10 -->
-
+          <!-- Task Manager -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card bg-secondary text-light shadow-lg">
+                <img src="./img/task-list.png" class="card-img-top" alt="Task Manager App" />
+                <div class="card-body text-center">
+                    <h5 class="card-title">✅📋 Task Manager App</h5>
+                    <p class="card-text technology"><strong>🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🗂️ Local Storage</strong></p>
+                    <p class="card-text">An intuitive web app for adding, editing, deleting, and categorizing tasks with persistent local storage.</p>
+                    <div class="d-flex justify-content-center gap-2 mt-2">
+                        <a href="./ptoject-html/task-manager.html" class="btn btn-outline-info">🔍 See Details</a>
+                        <a href="https://github.com/roddazad/task-manager-app" class="btn btn-outline-info" target="_blank">💻 View Code</a>
+                        <a href="https://roddazad.github.io/task-manager-app/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
           <!-- Project Number 11 -->
 
           <!-- Project Number 12 -->
