created a new project and added it to the carousel

--- a/index.html
+++ b/index.html
@@ -87,7 +87,26 @@
           <h2 class="display-5 fw-bold text-center mb-4">Projects</h2>
           <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
-                  <!-- Project 1 -->
+
+                    <!-- Project 1 -->
+                    <div class="carousel-item">
+                      <div class="card bg-secondary text-light shadow-lg">
+                          <img src="./img/job-board.png" class="card-img-top" alt="Job Board App" />
+                          <div class="card-body text-center">
+                              <h5 class="card-title">🏆💼 Job Board App</h5>
+                              <p class="card-text">A modern job search app that fetches and displays real-time job listings with advanced search and filtering options.</p>
+                              <div class="collapse" id="jobBoardDetails">
+                                  <p class="card-text">The Job Board App is a sleek and responsive web application designed to simplify job searching. It dynamically fetches job listings from the JSearch API and provides users with advanced filtering options based on job title, location, salary, experience level, and industry. Users can also save jobs to a personal list for later reference, ensuring an efficient job-hunting experience. With a modern UI, seamless navigation, and responsive design, the app offers a user-friendly platform for exploring job opportunities. Future enhancements include user authentication for cross-device saved jobs, a job application tracker, and AI-powered job recommendations based on user preferences.</p>
+                              </div>
+                              <div class="d-flex justify-content-center gap-2 mt-2">
+                                  <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#jobBoardDetails" aria-expanded="false">See Details</button>
+                                  <a href="https://github.com/roddazad/job-board-app" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
+                                  <a href="https://roddazad.github.io/job-board-app/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- Project 2 -->
                   <div class="carousel-item">
                       <div class="card bg-secondary text-light shadow-lg">
                           <img src="./img/mediterranean-delight.png" alt="Mediterranean Restaurant" class="card-img-top">
@@ -105,24 +124,7 @@
                           </div>
                       </div>
                   </div>
-                  <!-- Project 2 -->
-                  <div class="carousel-item">
-                      <div class="card bg-secondary text-light shadow-lg">
-                          <img src="./img/hero.png" class="card-img-top" alt="Piano Wonderland">
-                          <div class="card-body text-center">
-                              <h5 class="card-title">Piano Wonderland - Bilingual Piano Lessons Website 🎹</h5>
-                              <p class="card-text">A bilingual piano lessons website...</p>
-                              <div class="collapse" id="pianoDetails">
-                                  <p class="card-text">Built with HTML, CSS, and Bootstrap, this site offers seamless language switching, a dynamic service carousel, collapsible content sections, and an elegant dark-themed design.</p>
-                              </div>
-                              <div class="d-flex justify-content-center gap-2 mt-2">
-                              <button class="btn btn-outline-info mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#pianoDetails" aria-expanded="false">See Details</button>
-                              <a href="https://github.com/roddazad/piano-teacher" class="btn btn-outline-info mt-2" target="_blank">View Code</a>
-                              <a href="https://roddazad.github.io/piano-teacher/" class="btn btn-outline-light mt-2" target="_blank">Live Demo</a>
-                            </div>
-                          </div>
-                      </div>
-                  </div>
+                  
                   <!-- Project 3 -->
                   <div class="carousel-item">
                       <div class="card bg-secondary text-light shadow-lg">
