--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
                 <p class="card-text technology">
                   <strong
                     >🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🌐
-                    API</strong
+                    API | 🗂️ Local Storage</strong
                   >
                 </p>
                 <p class="card-text">
@@ -101,6 +101,84 @@
               </div>
             </div>
           </div>
+
+          <!-- Job Board App -->
+          <div class="col-md-6 col-lg-4 mb-4">
+              <div class="card bg-secondary text-light shadow-lg">
+                  <img src="./img/job-board.png" class="card-img-top" alt="Job Board App" />
+                  <div class="card-body text-center">
+                      <h5 class="card-title">🏆💼 Job Board App</h5>
+                      <p class="card-text technology"><strong>🖥️ HTML | 🎨 CSS | 📜 JavaScript | 🌐 API | 🗂️ Local Storage</strong></p>
+                      <p class="card-text">A modern job search app that fetches and displays real-time job listings with advanced search and filtering options.</p>
+                      <div class="d-flex justify-content-center gap-2 mt-2">
+                          <a href="./ptoject-html/job-board.html" class="btn btn-outline-info">🔍 See Details</a>
+                          <a href="https://github.com/roddazad/job-board-app" class="btn btn-outline-info" target="_blank">💻 View Code</a>
+                          <a href="https://roddazad.github.io/job-board-app/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <!-- Weather App -->
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card bg-secondary text-light shadow-lg">
+              <img
+                src="./img/weather.png"
+                class="card-img-top"
+                alt="Weather App"
+              />
+              <div class="card-body text-center">
+                <h5 class="card-title">🌤️ Weather App</h5>
+                <p class="card-text technology">
+                  <strong
+                    >🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🌐
+                    API | 🗂️ Local Storage</strong
+                  >
+                </p>
+                <p class="card-text">
+                  A dynamic weather app providing real-time weather updates and
+                  city search functionality.
+                </p>
+                <div class="d-flex justify-content-center gap-2 mt-2">
+                  <a
+                    href="./ptoject-html/weather.html"
+                    class="btn btn-outline-info"
+                    >🔍 See Details</a
+                  >
+                  <a
+                    href="https://github.com/roddazad/weather-app"
+                    class="btn btn-outline-info"
+                    target="_blank"
+                    >💻 View Code</a
+                  >
+                  <a
+                    href="https://roddazad.github.io/weather-app/"
+                    class="btn btn-outline-light"
+                    target="_blank"
+                    >🌐 Live Demo</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+            <!-- Task Manager -->
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="card bg-secondary text-light shadow-lg">
+                  <img src="./img/task-list.png" class="card-img-top" alt="Task Manager App" />
+                  <div class="card-body text-center">
+                      <h5 class="card-title">✅📋 Task Manager App</h5>
+                      <p class="card-text technology"><strong>🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🗂️ Local Storage</strong></p>
+                      <p class="card-text">An intuitive web app for adding, editing, deleting, and categorizing tasks with persistent local storage.</p>
+                      <div class="d-flex justify-content-center gap-2 mt-2">
+                          <a href="./ptoject-html/task-manager.html" class="btn btn-outline-info">🔍 See Details</a>
+                          <a href="https://github.com/roddazad/task-manager-app" class="btn btn-outline-info" target="_blank">💻 View Code</a>
+                          <a href="https://roddazad.github.io/task-manager-app/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
           <!-- TravelGo -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -142,6 +220,7 @@
               </div>
             </div>
           </div>
+
           <!-- Mediterranean Delight -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -184,6 +263,7 @@
               </div>
             </div>
           </div>
+
           <!-- Piano Wonderland -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -226,6 +306,7 @@
               </div>
             </div>
           </div>
+
           <!-- Financial Advisor -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -265,6 +346,7 @@
               </div>
             </div>
           </div>
+
           <!-- To-Do List -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -349,49 +431,6 @@
             </div>
           </div>
 
-          <!-- Weather App -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card bg-secondary text-light shadow-lg">
-              <img
-                src="./img/weather.png"
-                class="card-img-top"
-                alt="Weather App"
-              />
-              <div class="card-body text-center">
-                <h5 class="card-title">🌤️ Weather App</h5>
-                <p class="card-text technology">
-                  <strong
-                    >🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🌐
-                    API</strong
-                  >
-                </p>
-                <p class="card-text">
-                  A dynamic weather app providing real-time weather updates and
-                  city search functionality.
-                </p>
-                <div class="d-flex justify-content-center gap-2 mt-2">
-                  <a
-                    href="./ptoject-html/weather.html"
-                    class="btn btn-outline-info"
-                    >🔍 See Details</a
-                  >
-                  <a
-                    href="https://github.com/roddazad/weather-app"
-                    class="btn btn-outline-info"
-                    target="_blank"
-                    >💻 View Code</a
-                  >
-                  <a
-                    href="https://roddazad.github.io/weather-app/"
-                    class="btn btn-outline-light"
-                    target="_blank"
-                    >🌐 Live Demo</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-
           <!-- Quiz App -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card bg-secondary text-light shadow-lg">
@@ -429,24 +468,7 @@
               </div>
             </div>
           </div>
-          <!-- Task Manager -->
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card bg-secondary text-light shadow-lg">
-                <img src="./img/task-list.png" class="card-img-top" alt="Task Manager App" />
-                <div class="card-body text-center">
-                    <h5 class="card-title">✅📋 Task Manager App</h5>
-                    <p class="card-text technology"><strong>🖥️ HTML | 🎨 CSS | ⚡ Bootstrap | 📜 JavaScript | 🗂️ Local Storage</strong></p>
-                    <p class="card-text">An intuitive web app for adding, editing, deleting, and categorizing tasks with persistent local storage.</p>
-                    <div class="d-flex justify-content-center gap-2 mt-2">
-                        <a href="./ptoject-html/task-manager.html" class="btn btn-outline-info">🔍 See Details</a>
-                        <a href="https://github.com/roddazad/task-manager-app" class="btn btn-outline-info" target="_blank">💻 View Code</a>
-                        <a href="https://roddazad.github.io/task-manager-app/" class="btn btn-outline-light" target="_blank">🌐 Live Demo</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-          <!-- Project Number 11 -->
-
+       
           <!-- Project Number 12 -->
         </div>
       </div>
